--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheesecake Heaven</title>
+    <title>CheeseKot</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -69,19 +69,19 @@
     </nav>
     <section id="about">
         <h2>About Us</h2>
-        <p>Cheesecake Heaven brings you the most delightful cheesecakes, crafted with love and premium ingredients. Every slice is pure bliss!</p>
+        <p>CheeseKot brings you the most delightful cheesecakes, crafted with love and premium ingredients. Every slice is pure bliss!</p>
     </section>
     <section id="menu">
         <h2>Our Menu</h2>
-        <p>Explore our collection of classic, chocolate, berry, and seasonal cheesecakes!</p>
+        <p>Explore our collection of classic, chocolate, berry, strawberry and seasonal cheesecakes right now !!!</p>
         <img src="your-cheesecake-image.jpg" alt="Delicious Cheesecake">
     </section>
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>Got questions or want to place an order? Email us at: <a href="mailto:info@cheesecakeheaven.com">info@cheesecakeheaven.com</a></p>
+        <p>Got questions or want to place an order? Email us at: <a href="mailto:info@cheesekot.com">info@cheesekot.com</a></p>
     </section>
     <footer>
-        <p>&copy; 2025 Cheesecake Heaven. All rights reserved.</p>
+        <p>&copy; 2025 CheeseKot. All rights reserved.</p>
     </footer>
 </body>
 </html>
