--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Cheesecake Heaven</h1>
-        <p>The best cheesecakes under the sun!</p>
+        <h1>Welcome to CheeseKot</h1>
+        <p>The best cheesecakes under the sun, MUST GET IT!</p>
     </header>
     <nav>
         <a href="#about">About</a>
