--- a/index.html
+++ b/index.html
@@ -71,10 +71,20 @@
         <p>CheeseKot brings you the most delightful cheesecakes, crafted with love and premium ingredients. Every slice is pure bliss!</p>
     </section>
     <section id="menu">
-        <h2>Our Menu</h2>
-        <p>Explore our collection of classic, chocolate, berry, strawberry and seasonal cheesecakes right now !!!</p>
-        <img src="your-cheesecake-image.jpg" alt="Delicious Cheesecake">
-    </section>
+      <section id="menu">
+    <!-- New Menu Code Starts Here -->
+    <h2>Our Menu</h2>
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 1rem 0;">
+        <div style="border: 1px solid #e6c2a8; border-radius: 8px; padding: 1rem; width: 250px; background-color: #fff;">
+            <img src="classic-cheesecake.jpg" alt="Classic Cheesecake" style="width: 100%; height: auto; border-radius: 8px;">
+            <h3>Classic Cheesecake</h3>
+            <p>A timeless classic with a velvety texture and a hint of vanilla.</p>
+            <p><strong>$15.00</strong></p>
+        </div>
+        <!-- Add More Cheesecake Items Here -->
+    </div>
+    <!-- New Menu Code Ends Here -->
+</section>  
     <section id="contact">
         <h2>Contact Us</h2>
         <p>Got questions or want to place an order? Email us at: <a href="mailto:info@cheesekot.com">info@cheesekot.com</a></p>
